frontend design for app

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
     <!-- navigation -->
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="{{ url_for('tokens.index') }}">
+        <a class="navbar-item" href="{{ url_for('main.index') }}">
           <h1 class="is-size-3 has-text-weight-semibold font-rubik">
             Todo API
           </h1>
