--- a/app/templates/docs.html
+++ b/app/templates/docs.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 <!-- title -->
-{% block title %} Home {% endblock %}
+{% block title %} Documentation {% endblock %}
 <!-- title -->
 
 <!-- app -->
 {% block app %}
 <!--  -->
-<h1>This is the home page</h1>
+<h1>This is the docs page</h1>
 <!--  -->
 {% endblock %}
 <!-- app -->
