registered SQLAlchemy extension

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,9 @@
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="{{ url_for('main.index') }}">
-          <h1 class="is-size-3 has-text-weight-semibold font-rubik">
+          <h1
+            class="is-size-3 has-text-weight-semibold font-rubik has-text-info"
+          >
             Todo API
           </h1>
         </a>
@@ -50,7 +52,7 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-primary">
+              <a class="button is-success">
                 <strong>Sign up</strong>
               </a>
               <a class="button is-warning"> Log in </a>
