--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,11 +76,17 @@
       <div class="content has-text-centered">
         <p>
           <strong>Todo API</strong> by
-          <a href="https://freedomloisa.netlify.app/">Freedom Loisa</a>. The
-          source code is licensed
-          <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The
-          website content is licensed
-          <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+          <a href="https://freedomloisa.netlify.app/" class="is-underlined"
+            >Freedom Loisa</a
+          >. The source code is licensed
+          <a
+            href="http://opensource.org/licenses/mit-license.php"
+            class="is-underlined"
+            >MIT</a
+          >. The website content is licensed
+          <a
+            href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+            class="is-underlined"
             >CC BY NC SA 4.0</a
           >.
         </p>
