--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,45 @@
 <!-- app -->
 {% block app %}
 <!--  -->
-<h1>This is the home page</h1>
+<div class="my-6 p-5">
+  <div class="card mx-6 p-4 has-background-light">
+    <div class="card-content">
+      <div class="content is-size-5 has-text-centered">
+        <h1 class="is-size-3">Todo API</h1>
+        <h2 class="is-size-4 is-underlined">
+          Simple Todo backend for your desired frontend
+        </h2>
+        <br />
+        <p>
+          Create, read, update, and delete todos all from an easy-to-use API.
+          Includes user account functionality. Just provide an email and you
+          should receive your api key in your inbox a few moments later. To know
+          more about this project check out the
+          <a href="" class="is-underlined">about</a> page, or the
+          <a href="" class="is-underlined">source code</a> on GitHub. Sign up
+          today!
+        </p>
+        <br />
+        <p>
+          The purpose of this API is one, to give developers an opportunity to
+          play around with bearer token authentication. Second, is to offer
+          developers the freedom of designing their own frontend applications
+          without worrying much about what's under the hood. There is currently
+          a limit of 100 general todos per user account.
+        </p>
+        <br />
+        <div
+          class="is-flex is-flex-wrap-wrap is-justify-content-center is-align-items-center"
+        >
+          <a href="" class="button is-link mx-2">Get started</a>
+          <a href="{{ url_for('docs.docs') }}" class="button is-link mx-2"
+            >Read the docs</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!--  -->
 {% endblock %}
 <!-- app -->
