--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,9 +21,14 @@
           Includes user account functionality. Just provide an email and you
           should receive your api key in your inbox a few moments later. To know
           more about this project check out the
-          <a href="" class="is-underlined">about</a> page, or the
-          <a href="" class="is-underlined">source code</a> on GitHub. Sign up
-          today!
+          <a href="{{ url_for('main.about') }}" class="is-underlined">about</a>
+          page, or the
+          <a
+            href="https://github.com/LoisaKitakaya/Flask-Todo-API"
+            class="is-underlined"
+            >source code</a
+          >
+          on GitHub. Sign up today!
         </p>
         <br />
         <p>
