--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,21 +41,37 @@
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link"> More </a>
             <div class="navbar-dropdown">
-              <a class="navbar-item"> About </a>
-              <a class="navbar-item"> Contact </a>
-              <a class="navbar-item"> Source code </a>
+              <a href="{{ url_for('main.about') }}" class="navbar-item">
+                About
+              </a>
+              <a href="{{ url_for('main.contact') }}" class="navbar-item">
+                Contact
+              </a>
+              <a
+                href="https://github.com/LoisaKitakaya/Flask-Todo-API"
+                class="navbar-item"
+              >
+                Source code
+              </a>
               <hr class="navbar-divider" />
-              <a class="navbar-item"> Report an issue </a>
+              <a
+                href="https://github.com/LoisaKitakaya/Flask-Todo-API/issues"
+                class="navbar-item"
+              >
+                Report an issue
+              </a>
             </div>
           </div>
         </div>
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-success">
+              <a href="{{ url_for('main.signup') }}" class="button is-success">
                 <strong>Sign up</strong>
               </a>
-              <a class="button is-warning"> Log in </a>
+              <a href="{{ url_for('main.login') }}" class="button is-warning">
+                Log in
+              </a>
             </div>
           </div>
         </div>
