--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,5 +1,6 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Barlow&family=Rubik+Vinyl&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 
 /* 
 font-family: 'Barlow', sans-serif;
