--- a/app/templates/generate_token.html
+++ b/app/templates/generate_token.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 <!-- title -->
-{% block title %} About {% endblock %}
+{% block title %} Token {% endblock %}
 <!-- title -->
 
 <!-- app -->
 {% block app %}
 <!--  -->
-<h1>This is the about page</h1>
+<h1>This is the generate token page</h1>
 <!--  -->
 {% endblock %}
 <!-- app -->
