--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -43,6 +43,7 @@
         </span>
       </p>
     </div>
+    <div class="field flash-box">{% include 'notifications.html' %}</div>
     <div class="field">
       <p class="control">
         <button class="button is-success" type="submit" style="width: 100%">
@@ -57,7 +58,6 @@
         >.
       </p>
     </div>
-    <div class="field">{% include 'notifications.html' %}</div>
   </form>
 </div>
 <!--  -->
