--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,9 +15,7 @@
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="{{ url_for('main.index') }}">
-          <h1
-            class="is-size-3 has-text-weight-semibold font-rubik"
-          >
+          <h1 class="is-size-3 has-text-weight-semibold font-rubik">
             Todo API
           </h1>
         </a>
@@ -63,6 +61,14 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
+              {% if current_user.is_authenticated %}
+              <a
+                href="{{ url_for('main.logout') }}"
+                class="button is-danger is-light"
+              >
+                Log out
+            </a>
+            {% else %}
               <a
                 href="{{ url_for('main.signup') }}"
                 class="button is-primary is-light"
@@ -75,6 +81,7 @@
               >
                 Log in
               </a>
+              {% endif %}
             </div>
           </div>
         </div>
