--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,9 +18,10 @@
     <br />
     <p>
       Create, read, update, and delete todos all from an easy-to-use API.
-      Includes user account functionality. Just provide an email and you should
-      receive your api key in your inbox a few moments later. To know more about
-      this project check out the
+      Includes user account functionality. Just create a user account and you
+      should be able to generate a JWT (Jason Web Token) access token. Use this
+      token to send requests to the api endpoints. To know more about this
+      project check out the
       <a
         href="https://github.com/LoisaKitakaya/Flask-Todo-API"
         class="is-underlined"
@@ -29,7 +30,7 @@
       on GitHub. Sign up today!
     </p>
     <br />
-    <p>
+    <p class="mb-6">
       The purpose of this API is one, to give developers an opportunity to play
       around with bearer token authentication. Second, is to offer developers
       the freedom of designing their own frontend applications without worrying
