--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,9 @@
       </div>
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
+          <a href="{{ url_for('main.generate_token') }}" class="navbar-item">
+            Generate token
+          </a>
           <a href="{{ url_for('docs.docs') }}" class="navbar-item">
             Documentation
           </a>
