preparing to build api

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,10 @@
           <a href="{{ url_for('main.generate_token') }}" class="navbar-item">
             Generate token
           </a>
-          <a href="{{ url_for('docs.docs') }}" class="navbar-item">
+          <a
+            href="https://github.com/LoisaKitakaya/Flask-Todo-API/blob/main/README.md"
+            class="navbar-item"
+          >
             Documentation
           </a>
           <div class="navbar-item has-dropdown is-hoverable">
