--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,9 @@
         class="button is-link mx-2 is-light"
         >Get started</a
       >
-      <a href="{{ url_for('docs.docs') }}" class="button is-link mx-2 is-light"
+      <a
+        href="https://github.com/LoisaKitakaya/Flask-Todo-API/blob/main/README.md"
+        class="button is-link mx-2 is-light"
         >Read the docs</a
       >
     </div>
