created api endpoints for app

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
 <div class="m-6 p-5">
   <div class="is-size-5 has-text-centered">
     <h1 class="is-size-3 font-rubik">Todo API</h1>
+    <br>
     <h2
       class="is-size-4 is-underlined is-italic has-text-weight-light has-text-grey"
     >
@@ -20,8 +21,20 @@
       Create, read, update, and delete todos all from an easy-to-use API.
       Includes user account functionality. Just create a user account and you
       should be able to generate a JWT (Jason Web Token) access token. Use this
-      token to send requests to the api endpoints. To know more about this
-      project check out the
+      token to send requests to the api endpoints.
+    </p>
+    <br />
+    <p>
+      The purpose of this API is one, to give developers an opportunity to play
+      around with token based authentication. Second, is to offer developers the
+      freedom of designing their own frontend applications without worrying much
+      about what's under the hood.
+    </p>
+    <br />
+    <p>There is currently a limit of 100 general todos per user account.</p>
+    <br />
+    <p class="mb-6">
+      To know more about this project check out the
       <a
         href="https://github.com/LoisaKitakaya/Flask-Todo-API"
         class="is-underlined"
@@ -29,15 +42,6 @@
       >
       on GitHub. Sign up today!
     </p>
-    <br />
-    <p class="mb-6">
-      The purpose of this API is one, to give developers an opportunity to play
-      around with bearer token authentication. Second, is to offer developers
-      the freedom of designing their own frontend applications without worrying
-      much about what's under the hood. There is currently a limit of 100
-      general todos per user account.
-    </p>
-    <br />
     <div
       class="is-flex is-flex-wrap-wrap is-justify-content-center is-align-items-center"
     >
