--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
           <a href="{{ url_for('main.generate_token') }}" class="navbar-item">
-            Generate token
+            Tokens
           </a>
           <a
             href="https://github.com/LoisaKitakaya/Flask-Todo-API/blob/main/README.md"
@@ -45,9 +45,6 @@
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link"> More </a>
             <div class="navbar-dropdown">
-              <a href="{{ url_for('main.contact') }}" class="navbar-item">
-                Contact
-              </a>
               <a
                 href="https://github.com/LoisaKitakaya/Flask-Todo-API"
                 class="navbar-item"
@@ -112,7 +109,7 @@
             >Freedom Loisa</a
           >. The source code is licensed
           <a
-            href="http://opensource.org/licenses/mit-license.php"
+            href="https://github.com/LoisaKitakaya/Flask-Todo-API/blob/main/LICENSE"
             class="is-underlined"
             >MIT</a
           >. The website content is licensed
